<resources>
    <string name="app_name">Pick my order</string>

    <string name="Apple">Apple</string>
    <string name="Mango">Mango</string>
    <string name="Orange">Orange</string>
    <string name="Banana">Banana</string>

    <string name="your_string_here">Forgot Password? &lt;u>underline&lt;/u>.</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_van_stock">Van Stock</string>
    <string name="menu_brands">Brands</string>
    <string name="menu_wholeseller">Wholesellers</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_stock_orders">Stock Orders</string>

    <string name="menu_quote">Quotes</string>
    <string name="menu_project_details">Project Details</string>
    <string name="menu_account_details">Account Details</string>
    <string name="menu_quotes">Quotes</string>
    <string name="menu_catalogues">Catalogues</string>
    <string name="menu_logout">Logout </string>
    <string name="card_text">Please Enter your Card Number, Expiry Date and reverse 3 Digit Security Code</string>
    <string name="publishablekey">pk_test_mFNhtfc5S06OgYR0bL64Wkgs</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="spinner_title">Select Category</string>

</resources>
